nivasa-macros/tests/trybuild/validation_is_enum_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct AccessForm {
    #[is_enum(AccessLevel)]
    access_level: bool,
}

fn main() {}
